# bees_data

./: .gitignore  README.md  init.sh  main.py  pyproject.toml
docker/: Dockerfile  docker-compose.yml
docker/dags/: bronze_to_silver_dag.py  extract_breweries_dag.py  failure_dag.py
docker/minio/data/.minio.sys/: format.json
docker/minio/data/.minio.sys/tmp/.trash/254dafd8-f398-4c41-8240-9e792164acad/: xl.meta.bkp
docker/minio/data/.minio.sys/tmp/.trash/2b328926-85a0-4e04-83ac-e31122dd271c/: xl.meta.bkp
docker/minio/data/.minio.sys/tmp/.trash/501cb749-c0f1-4af5-8501-035357e38575/: xl.meta.bkp
docker/minio/data/.minio.sys/tmp/.trash/5479794d-2329-4d4e-a6d8-7edb0c58ae93/: xl.meta.bkp
docker/minio/data/.minio.sys/tmp/.trash/57b67cdb-707c-4d75-9f94-ad5cb857139f/: xl.meta.bkp
docker/minio/data/.minio.sys/tmp/.trash/6d5d049c-eabf-40f9-826d-fbd05c0a1797/: xl.meta.bkp
docker/minio/data/.minio.sys/tmp/.trash/7b480fc4-668d-46a7-98ba-64aca782bcba/: xl.meta.bkp
docker/minio/data/.minio.sys/tmp/.trash/840ef23d-6446-44b7-b9e2-c3b92a83b3b9/: xl.meta.bkp
docker/minio/data/.minio.sys/tmp/.trash/93cde7d5-9ecc-421a-9169-838fe8b2d782/: xl.meta.bkp
docker/minio/data/.minio.sys/tmp/.trash/a9325092-d08d-40e6-a795-142b55fa0fdc/: xl.meta.bkp
docker/minio/data/.minio.sys/tmp/.trash/b705dfb2-aa55-43d6-a59b-e80b0ccb7764/: xl.meta.bkp
docker/minio/data/.minio.sys/tmp/.trash/bb38abae-e33a-4e0c-92a1-c19dff12a370/: xl.meta.bkp
docker/src/: etl_bronze_to_silver.py  etl_silver_to_gold.py  extract_data_api.py  task_failure.py
src/: etl_bronze_to_silver.py  extract_data_api.py
(+6 files in other folders)
